--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Google_Bard_logo.svg" id="gemin-pro-logo">
                 <div id="title-div">
                     <div id="zodiac-branding">zodiac </div>
-                    <div id="gemini-pro-branding">powered by Gemini Pro</div>
+                    <div id="gemini-pro-branding">AIzaSyAbRp0cXP-UdvIXOKO_MQmDdqqJDiQaP7o</div>
                 </div>
             </div>
             <div class="navbar">
