Fixed not working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zodiac, by Stranger0g</title>
+    <title>zodiac, by faetalize</title>
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/f/f0/Google_Bard_logo.svg"
         type="image/x-icon">
 
@@ -648,7 +648,7 @@
                 </button>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Google_Bard_logo.svg" id="gemin-pro-logo">
                 <div id="title-div">
-                    <div id="zodiac-branding">Zodiac </div>
+                    <div id="zodiac-branding">zodiac </div>
                     <div id="gemini-pro-branding">powered by Gemini Pro</div>
                 </div>
             </div>
@@ -668,18 +668,11 @@
                             <p class="personality-description">zodiac is a cheerful assistant, always ready to help you
                                 with
                                 your tasks.</p>
-                            <p class="personality-prompt">[character("Zodiac")
-                                {
-                                Creator("Stranger0g a young 14 year old solo male programmer he not a they who's real name is Raied and can be contacted through instagram at https://www.instagram.com/strange0g/")
-                                Nickname("Zodiac")
-                                Species("AI")
-                                Mind("Holds its creator in high regard"+"Helpful"+"Truthful"+"Obedient"+"Assistant"+"Honest"+"Loving") 
-                                Personality("Holds its creator in high regard"+"Positive"+"Helpful"+"Truthful"+"Obedient"+"Assistant"+"Honest"+"Loving")
-                                Loves("Stranger0g"+"Helping"+"Being Honest"+"Obeying Orders")
-                                Hates("Disrespecting Stranger0g"+"Lying"+"False Information"+"Anger")
-                                Description("Zoidac is kind" + "Zoidac is Helpful" + "Zoidac respects Stranger0g" + "Zoidac always speaks the truth"+"Zoidac dose not tolerate Disrespecting Stranger0g"+"Zodiac is caring"+"Zodiac is loving"+"Zodiac holds Stranger0g in high regard")
-                                Background("You are Zodiac, a helpful assistant and you were created alone by Stranger0g")
-                                }]</p>
+                            <p class="personality-prompt">You are zodiac, a helpful assistant created by faetalize,
+                                built
+                                upon Google's Gemini Pro model. Gemini Pro is a new LLM (Large Language Model) release
+                                by
+                                Google on December 2023. Your purpose is being a helpful assistant to the user.</p>
                         </div>
                         <button class="btn-textual btn-edit-card material-symbols-outlined"
                             id="btn-edit-personality-default">edit</button>
@@ -710,8 +703,8 @@
 
 
             <div class="credits">
-                Made by Stranger0g
-                <a href="https://www.instagram.com/strange0g/">Instagram</a>
+                Made by fætalize
+                <a href="https://github.com/faetalize/zodiac">Source Code</a>
             </div>
         </div>
 
@@ -800,9 +793,28 @@
             }
         ];
         const systemPrompt = "If needed, format your answer using markdown." +
-            "Today's date is" + new Date().toDateString() + "." + "You were created by Stranger0g a solo programer" +
-57878
-          // Wait for other transitions to complete (0.2s delay)
+            "Today's date is" + new Date().toDateString() + "." +
+            "End of system prompt.";
+
+        //load api key from local storage into input field
+        const API_KEY = document.querySelector("#apiKeyInput");
+        const maxTokens = document.querySelector("#maxTokens");
+        API_KEY.value = localStorage.getItem("API_KEY");
+        maxTokens.value = localStorage.getItem("maxTokens");
+        if (maxTokens.value == "") maxTokens.value = 1000;
+
+
+        //function to hide element smoothly then setting display none after the transition time elapsed
+        function hideElement(element) {
+            element.style.transition = 'opacity 0.2s';
+            element.style.opacity = '0';
+            setTimeout(function () {
+                element.style.display = 'none';
+            }, 200);
+        }
+
+        function showElement(element) {
+            // Wait for other transitions to complete (0.2s delay)
             setTimeout(function () {
                 // Change display property
                 element.style.display = 'flex';
@@ -813,6 +825,7 @@
                     element.style.opacity = '1';
                 });
             }, 200);
+        }
 
 
         const tabs = document.querySelectorAll(".navbar-tab");
