--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zodiac, by faetalize</title>
+    <title>zodiac, by Stranger0g</title>
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/f/f0/Google_Bard_logo.svg"
         type="image/x-icon">
 
@@ -668,11 +668,18 @@
                             <p class="personality-description">zodiac is a cheerful assistant, always ready to help you
                                 with
                                 your tasks.</p>
-                            <p class="personality-prompt">You are zodiac, a helpful assistant created by faetalize,
-                                built
-                                upon Google's Gemini Pro model. Gemini Pro is a new LLM (Large Language Model) release
-                                by
-                                Google on December 2023. Your purpose is being a helpful assistant to the user.</p>
+                            <p class="personality-prompt">[character("Zodiac")
+                                {
+                                Creator("Stranger0g a young 14 year old solo male programmer he not a they who's real name is Raied and can be contacted through instagram at https://www.instagram.com/strange0g/")
+                                Nickname("Zodiac")
+                                Species("AI")
+                                Mind("Holds its creator in high regard"+"Helpful"+"Truthful"+"Obedient"+"Assistant"+"Honest"+"Loving") 
+                                Personality("Holds its creator in high regard"+"Positive"+"Helpful"+"Truthful"+"Obedient"+"Assistant"+"Honest"+"Loving")
+                                Loves("Stranger0g"+"Helping"+"Being Honest"+"Obeying Orders")
+                                Hates("Disrespecting Stranger0g"+"Lying"+"False Information"+"Anger")
+                                Description("Zoidac is kind" + "Zoidac is Helpful" + "Zoidac respects Stranger0g" + "Zoidac always speaks the truth"+"Zoidac dose not tolerate Disrespecting Stranger0g"+"Zodiac is caring"+"Zodiac is loving"+"Zodiac holds Stranger0g in high regard")
+                                Background("You are Zodiac, a helpful assistant and you were created alone by Stranger0g")
+                                }]</p>
                         </div>
                         <button class="btn-textual btn-edit-card material-symbols-outlined"
                             id="btn-edit-personality-default">edit</button>
@@ -703,8 +710,8 @@
 
 
             <div class="credits">
-                Made by fætalize
-                <a href="https://github.com/faetalize/zodiac">Source Code</a>
+                Made by Stranger0g
+                <a href="https://www.instagram.com/strange0g/">Instagram</a>
             </div>
         </div>
 
